# credit-risk-poc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
app/: __init__.py  data_loader.py  streamlit_app.py
app/sections/: __init__.py  candidate_pool.py  overview.py  registry.py  selection.py
configs/: auto_features.yaml  base.yaml  composite_features.yaml  features.yaml  selection.yaml  semantic_features.yaml
credit-risk-plugin/: .gitignore  README.md
credit-risk-plugin/.claude-plugin/: plugin.json
credit-risk-plugin/engine/: __init__.py  config.py
credit-risk-plugin/references/: outputs_map.md  selection_logic.md  variable_design_guide.md
credit-risk-plugin/scripts/: archive_run.py  feature_evaluator.py  feature_registry.py
credit-risk-plugin/skills/: __init__.py
docs/: README.md  feature_catalog.md
docs/analysis_runs/: README.md
docs/architecture/: dual_engine_architecture.md
docs/data_knowledge/: README.md  business_glossary.md  dataset_overview.md  raw_data_quality_notes.md  table_reference.md
docs/feature_registry/: README.md  auto_features.md  composite_features.md  rejected_features.md  semantic_features.md
docs/methodology/: README.md  candidate_pool_generation.md  credit_customer_variable_mining_method.md  current_analysis_playbook.md  dual_engine_feature_mining_method.md  dual_engine_quickstart.md  (+3 more)
notebooks/: 01_eda.ipynb  02_feature_validation.ipynb
tests/: test_data_loader.py  test_feature_selection.py  test_features.py  test_operators.py  test_skill_contract.py  test_skills_runtime.py
(+164 files in other folders)
