[project]
name = "credit-risk-poc"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "featuretools>=1.31.0",
    "pandas>=2.2.3",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "pyarrow>=23.0.1",
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
